replaced FXML with java, replaced css with binary css, some minor fixes