@@ -99,6 +99,8 @@
 									<opt><![CDATA[--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED]]></opt>
 									<opt><![CDATA[--add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED]]></opt>
 									<opt><![CDATA[--add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED]]></opt>
+									<opt><![CDATA[--add-exports javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED]]></opt>
+									<opt><![CDATA[--add-exports javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED]]></opt>
 									<opt><![CDATA[--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED]]></opt>
 									<opt><![CDATA[--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED]]></opt>
 									<opt><![CDATA[--add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED]]></opt>
