@@ -2,6 +2,8 @@
 	--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED ^
 	--add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED ^
 	--add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED ^
+	--add-exports javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED ^
+	--add-exports javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED ^
 	--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED ^
 	--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED ^
 	--add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED ^
